# Qv2ray-personal-fork

./: CMakeLists.txt
.github/workflows/: hashfile.yml  pacman.yml
config/: CMakeLists.txt
src/: Qv2rayApplication.cpp
src/ui/windows/: w_MainWindow.cpp
