if(WIN32)
	if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
	install(DIRECTORY config_win32/plugins DESTINATION config)
	install(DIRECTORY config_win32/vcore DESTINATION config)
	else()
	install(DIRECTORY config_win64/plugins DESTINATION config)
	install(DIRECTORY config_win64/vcore DESTINATION config)
	endif()
elseif(APPLE)
	install(DIRECTORY config_apple/plugins DESTINATION config)
	install(DIRECTORY config_apple/vcore DESTINATION config)
else()
	install(DIRECTORY config_linux/plugins DESTINATION config)
	install(DIRECTORY config_linux/vcore DESTINATION config)
endif()